update tabs support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
 project(EasyNotepad VERSION 2.0)
 
-# Źródła
 add_executable(${PROJECT_NAME} EasyNotepad/main.cpp)
 
 target_sources(${PROJECT_NAME} PRIVATE
     EasyNotepad/SFML_intro.hpp
 )
 
-# Ustawienia języka C++
 set_target_properties(${PROJECT_NAME} PROPERTIES
   CXX_STANDARD 17
   CXX_STANDARD_REQUIRED ON
@@ -16,10 +14,8 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
 
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_17)
 
-# Wskaż katalog SFML, jeśli nie jest w standardowej lokalizacji
 set(SFML_DIR "C:/SFML-2.6.2/lib/cmake/SFML")
 find_package(SFML 2.6.2 COMPONENTS graphics window system REQUIRED)
-
 target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-window sfml-system)
 
 # Ustaw working directory na katalog z assets
@@ -27,7 +23,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES
     VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/EasyNotepad"
 )
 
-# Ustaw PATH do DLL-i SFML, by nie kopiować ich ręcznie
+# Ustaw PATH do DLL-i SFML, by nie kopiować
 set_target_properties(${PROJECT_NAME} PROPERTIES
     VS_DEBUGGER_ENVIRONMENT "PATH=%PATH%;C:\\SFML-2.6.2\\bin"
 )
